@@ -10,7 +10,6 @@
     </parent>
 
     <dependencies>
-        <!-- JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -22,28 +21,24 @@
             <version>21.0.5</version>
         </dependency>
 
-        <!-- ControlsFX -->
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.2.2</version>
         </dependency>
 
-        <!-- FormsFX -->
         <dependency>
             <groupId>com.dlsc.formsfx</groupId>
             <artifactId>formsfx-core</artifactId>
             <version>11.4.1</version>
         </dependency>
 
-        <!-- Ikonli JavaFX -->
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
             <version>12.4.0</version>
         </dependency>
 
-        <!-- BootstrapFX -->
         <dependency>
             <groupId>org.kordamp.bootstrapfx</groupId>
             <artifactId>bootstrapfx-core</artifactId>
@@ -98,6 +93,13 @@
                     <type>msi</type>
                     <winShortcut>true</winShortcut>
                     <winMenu>true</winMenu>
+                    <arguments>
+                        <argument>--add-exports</argument>
+                        <argument>javafx.base/com.sun.javafx.event=ALL-UNNAMED</argument>
+                        <argument>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argument>
+                        <argument>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</argument>
+                        <argument>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
